# Sim_Fisicas_JART

./: .gitignore  README.md  examen_2.rar
.obsidian/: workspace.json
GitHub/: instrucciones.txt
Investigaciones/Investigaciones/: Investigacion_Colisiones_JART.md  JART_Investigación_y_Lectura_Modulo_6 _Libro.md
Investigaciones/Investigaciones/.obsidian/: workspace.json
examen_2/: CMakeLists.txt  README.MD  main.cpp
examen_parcial2/: CMakeLists.txt  main.cpp
hola_bala/: CMakeLists.txt  README.md  main.cpp
hola_disparo/: CMakeLists.txt  main.cpp
hola_joints/: CMakeLists.txt  main.cpp
hola_jupiter/: CMakeLists.txt  README.md  main.cpp
hola_luna/: README.md  main.cpp
hola_mundo/: README.md
hola_poligonos/: CMakeLists.txt  geogebra-export.ggb  main.cpp
tema_2/: main.cpp
tema_2_tarea_1/: CMakeLists.txt  main.cpp
